# easydw

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
.gitea/workflows/: ci.yml
easydw/: __init__.py
easydw/database/: __init__.py  database.py  oracle.py  postgresql.py
easydw/dimension/: __init__.py  generic.py  type_0.py  type_1.py  type_2.py
easydw/fact/: __init__.py  fact.py
easydw/logging/: __init__.py  logger.py
test/: __init__.py
test/dimension/: __init__.py  test_type_0.py  test_type_1.py  test_type_2.py
