[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "easydw"
version = "1.0.1"
dependencies = [
    "SQLAlchemy>=2.0.46",
    "polars>=1.37.1",
    "psycopg2>=2.9.11",
    "oracledb>=3.0.0",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]
requires-python =">=3.10"
authors = [
    { name = "Andrea Consonni"}
]
description = "Utility for simplifying the management of data warehouse dimensions and facts"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["dw", "dwh", "data warehouse"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Database :: Database Engines/Servers",
    "Programming Language :: Python :: 3.10"
]
